--- a/Website/budget.html
+++ b/Website/budget.html
@@ -34,7 +34,7 @@
                                         </ul>
                                     </li>
                                     <li><a href="budget.html">Budget</a></li>
-                                    <li><a href="journey.html">Our Journey</a></li>
+                                    <li><a href="journey.html">Our Story</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -44,7 +44,7 @@
 				<section id="main" class="container">
 					<header>
 						<h2>Budget</h2>
-						<p>An account of how you spent your $250 budget. You must include all components and materials and their estimated costs (even if you obtained them for free somehow). Please note where something was obtained for free and cost is just your best estimate.</p>
+						<p> This is an account of all of the parts that we used for our project including parts that we acquired for free.</p>
 					</header>
                     
                     <div class="row">
@@ -74,7 +74,7 @@
                                                     </tr>
                                                     <tr>
                                                         <td>Aluminum 6063 U Channel Extrusion (.75"x.75"x24")</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>1</td>
                                                         <td>4.00</td>
                                                     </tr>
@@ -93,19 +93,19 @@
                                                     </tr>
                                                     <tr>
                                                         <td>Aluminum 6061 Rectangular Stock (3"x1"x8")</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>1</td>
                                                         <td>15.00</td>
                                                     </tr>
                                                     <tr>
                                                         <td>Aluminum 6061 Plate (.25"x6"x6")</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>1</td>
                                                         <td>10.00</td>
                                                     </tr>
                                                     <tr>
                                                         <td>Aluminum 6061 Round Stock (2"x2"x3")</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>1</td>
                                                         <td>3.00</td>
                                                     </tr>
@@ -135,7 +135,7 @@
                                                     </tr>
 <tr>
                                                         <td>1/8" Delrin Sheet (.125"x6"x6")</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>1</td>
                                                         <td>0.99</td>
                                                     </tr>
@@ -147,25 +147,25 @@
                                                     </tr>
                                                     <tr>
                                                         <td>Plywood (.125"x12"x12")</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>1</td>
                                                         <td>0.99</td>
                                                     </tr>
                                                     <tr>
                                                         <td>Plywood (.25"x12"x12")</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>1</td>
                                                         <td>3.99</td>                                                        
                                                     </tr>
                                                     <tr>
                                                         <td>Plywood (.5"x24"48")</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>1</td>
                                                         <td>9.99</td>
                                                     </tr>
                                                     <tr>
                                                         <td>2x4 Lumber (48")</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>1</td>
                                                         <td>0.99</td>
                                                     </tr>
@@ -213,7 +213,7 @@
                                                     </tr>
                                                     <tr>
                                                         <td>Assorted VEX Gears</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>-</td>
                                                         <td>9.99</td>
                                                     </tr>
@@ -231,13 +231,13 @@
                                                     </tr>
                                                     <tr>
                                                         <td>Low Profile Motors</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>3</td>
                                                         <td>1.99</td>
                                                     </tr>
                                                     <tr>
                                                         <td>VEX 393 Motor</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>4</td>
                                                         <td>59.96</td>
                                                     </tr>
@@ -249,7 +249,7 @@
                                                     </tr>
                                                     <tr>
                                                         <td>Xbox 360 Kinect</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>1</td>
                                                         <td>125.00</td>
                                                     </tr>
@@ -326,7 +326,7 @@
                                                     </tr>
                                                     <tr>
                                                         <td>Acrylic Sheet (.25"x6"x6")</td>
-                                                        <td>N/A</td>
+                                                        <td>personal/free</td>
                                                         <td>1</td>
                                                         <td>2.00</td>
                                                     </tr>
