--- a/Website/how_it_works.html
+++ b/Website/how_it_works.html
@@ -34,7 +34,7 @@
                                         </ul>
                                     </li>
                                     <li><a href="budget.html">Budget</a></li>
-                                    <li><a href="journey.html">Our Journey</a></li>
+                                    <li><a href="journey.html">Our Story</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -45,7 +45,7 @@
 				<section id="main" class="container">
 					<header>
 						<h2>Systems</h2>
-						<p>stuff</p>
+						<p>The pieces that make up the puzzle</p>
 					</header>
                     <div class="row">
                         <div class = "12u">
