--- a/Website/index.html
+++ b/Website/index.html
@@ -13,38 +13,38 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header" class="alt">
-					<nav id="nav">
-						<ul>
+                <header id="header" class="alt">
+                    <nav id="nav">
+                        <ul>
                             <li><a href="index.html" class="button">Home</a></li>
-							<li><a href="team.html" class="button">The Team</a></li>
+                            <li><a href="team.html" class="button">The Team</a></li>
                             <li>
-								<a href="#" class="icon fa-angle-down">Learn More</a>
-								<ul>
-									<li><a href="system_overview.html">System Overview</a></li>
-									<li>
-										<a href="how_it_works.html">How it works</a>
-										<ul>
-											<li><a href="mechanical.html">Mechanical</a></li>
-											<li><a href="electrical.html">Electrical</a></li>
-											<li><a href="software.html">Software</a></li>
-											<li><a href="firmware.html">Firmware</a></li>
+                                <a href="#" class="icon fa-angle-down">Learn More</a>
+                                <ul>
+                                    <li><a href="system_overview.html">System Overview</a></li>
+                                    <li>
+                                        <a href="how_it_works.html">How it works</a>
+                                        <ul>
+                                            <li><a href="mechanical.html">Mechanical</a></li>
+                                            <li><a href="electrical.html">Electrical</a></li>
+                                            <li><a href="software.html">Software</a></li>
+                                            <li><a href="firmware.html">Firmware</a></li>
                                             <li><a href="prototype.html">Prototype</a></li>
                                             <li><a href="sensors.html">Sensors</a></li>
-										</ul>
-									</li>
+                                        </ul>
+                                    </li>
                                     <li><a href="budget.html">Budget</a></li>
-									<li><a href="journey.html">Our Journey</a></li>
-								</ul>
-							</li>
-						</ul>
-					</nav>
-				</header>
+                                    <li><a href="journey.html">Our Story</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                </header>
 
 			<!-- Banner -->
 				<section id="banner">
 					<h2>Frost</h2>
-					<p>The Snowball Catapult</p>
+					<p>Changing the Snowball Game</p>
 					<ul class="actions">
 						<li><a href="project_video.html" class="button special" target="_blank">Watch Video</a></li>
 						<li><a href="#main" class="button scrolly">Features</a></li>
@@ -55,9 +55,9 @@
                     <header class="major">
                         <h2>Introducing the ultimate Snowball Catapult
                         </h2>
-                        <p>Frost, an integrated experiment in the fields of computer vision, sensor fusion, and artificial intelligence, is an autonomous robot that can launch snowballs at enemies. Just arm it with snowballs, and watch as it dominates snowball fights on its own, with an accuracy equivalent to or better than a human.
+                        <p>Frost, an integrated experiment in the fields of computer vision, sensor fusion, and artificial intelligence, is an <strong>autonomous robot that can launch snowballs</strong> at enemies. Just arm it with snowballs, and watch as it dominates snowball fights on its own, with an accuracy equivalent to or better than a human.
                         </p>
-                        <p> Learn more about how it works <a href="how_it_works.html">here</a></p>
+                        <p style="font-size:1.25em;"> Learn more about how it works <a href="how_it_works.html">here</a></p>
                     </header>
                     <div class="features-row">
                         <section>
@@ -75,7 +75,7 @@
                         <section>
                             <span class="icon major fa-bullseye accent4"></span>
                             <h3>Accurate</h3>
-                            <p>Accuracy Error Margin of less than 2 inches</p>
+                            <p>Accuracy Error Margin of 1 foot</p>
                         </section>
                         <section>
                             <span class="icon major fa-bolt accent5"></span>
