--- a/Website/mechanical.html
+++ b/Website/mechanical.html
@@ -34,7 +34,7 @@
                                         </ul>
                                     </li>
                                     <li><a href="budget.html">Budget</a></li>
-                                    <li><a href="journey.html">Our Journey</a></li>
+                                    <li><a href="journey.html">Our Story</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -44,14 +44,14 @@
 				<section id="main" class="container">
 					<header>
 						<h2>Mechanical</h2>
-						<p>look it works</p>
+                        <p><strong>View all of our CAD </strong><a href="https://workbench.grabcad.com/workbench/projects/gc6RtBxjyx5Vm9FCl2IYAxmc0a5mYkYfOIFeBuxM0wfXgw#/space/gcECZ4DezKKR9ZnmDXG2qsIv_2uoKUOvtmeNvea72cHWiy">here</a></p>
 					</header>
                     
                     <div class="row">
 						<div class="12u">
                             <div class="box">
                                 <h3>Design</h3>
-                                <p>A detailed description of your mechanical design (CAD images/renderings are appropriate) and any necessary analysis.</p>
+                                <p>To achieve our goal of hitting targets accurately from far distances, we aimed for a reliable mechanical system. We settled on a catapult because it was something we knew would be accurate and would be robust once we got it working. As seen in the images below, we would always write and sketch our mechanical ideas on a whiteboard as a team. By proceeding to create mechanical drawings, we ensured that we didn’t run into issues with CAD and reduced miscommunication about the mechanical system.</p>
                             </div>
                         </div>
                     </div>
@@ -59,8 +59,26 @@
 						<div class="12u">
                             <div class="box">
                                 <h3>CAD</h3>
-                                <p>A detailed description of your mechanical design (CAD images/renderings are appropriate) and any necessary analysis.</p>
-                                <span class="image fit"><img src="images/final_cad.png" alt="" /></span>
+                                <p>We visualized our ideation with CAD to ensure that all of our components properly assembled together and that our intended geometry would provide the furthest launch distance possible. CAD also enabled us to produce accurate engineering drawings for fabrication.</p>
+                                <span class="image fit"><img src="images/Mechanical/final_cad.png" alt="" /></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+						<div class="12u">
+                            <div class="box">
+                                <h3>Winch</h3>
+                                <p>The gearbox is made of two laser cut plates, sandwiching in VEX gears. 3 VEX 393 motors powers 12 tooth gears, which gets reduced to 36 tooth gears. This gives us a 3:1 torque advantage.<br/><br/>The winch is an assembly which spools wire around the pulley. This is able to withstand the force of the catapult’s surgical tubing.</p>
+                                <span class="image fit"><img src="images/Mechanical/Winch_Gearbox.JPG" alt="" /></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+						<div class="12u">
+                            <div class="box">
+                                <h3>Retracting Arm and Hook</h3>
+                                <p>The Retracting arm is what allows our catapult to have variable power. The retracting arm pulls back the main arm with the power of the winch. When the arm is in the proper position, two servos pulls back the hook releasing the main arm.</p>
+                                <span class="image fit"><img src="images/Mechanical/Catapult_hook.JPG" alt="" /></span>
                             </div>
                         </div>
                     </div>
@@ -68,10 +86,19 @@
 						<div class="12u">
                             <div class="box">
                                 <h3>Fabrication</h3>
-                                <p>A detailed description of your mechanical design (CAD images/renderings are appropriate) and any necessary analysis.</p>
+                                <p>Our catapult required high tolerancing for fitting together multiple pieces of the catapult. We tried to limited complexity of our components to allow for CNC operations, reducing the time spent on machining. Overall, we spent around 48 man-hours in the shop creating our parts. </p>
+                                <span class="image fit"><img src="images/Mechanical/fabrication_1.jpeg" alt="" /></span>
                             </div>
                         </div>
                     </div>
+                    <!--<div class="row">
+						<div class="12u">
+                            <div class="box">
+                                <h3>Final Product</h3>
+                                <p>In the development of our catapult, we learned about some faults in our designs which we had to rectify. Because the magnitude of force impacting our catapult stop is so high, the catapult arm began to fatigue and bend a few degrees. As a result, we had to go back and reinforce the arm with aluminum braces to prevent further bending. During the first launch, we saw a noticeable increase in range of around 150%.</p>
+                            </div>
+                        </div>
+                    </div>-->
 				</section>
             
                 <footer id="footer">
