--- a/Website/system_overview.html
+++ b/Website/system_overview.html
@@ -34,7 +34,7 @@
                                         </ul>
                                     </li>
                                     <li><a href="budget.html">Budget</a></li>
-                                    <li><a href="journey.html">Our Journey</a></li>
+                                    <li><a href="journey.html">Our Story</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -44,7 +44,6 @@
 				<section id="main" class="container">
 					<header>
 						<h2>System Overview</h2>
-						<p>dolla holla</p>
 					</header>
                     
                     <div class="row">
@@ -59,7 +58,8 @@
                             <div class="12u">
                                 <section class="box">
                                     <h3>System Diagram</h3>
-                                    <p>Three Python scripts, two Arduino microcontrollers, and a helper module are used to make Frost work. One Python script receives image inputs from the Kinect camera. A second Python script receives data from the Arduino attached to the LIDAR via serial connection. Both of these scripts then feed into a main script that collects the data from both modules and combines them using a helper module. The algorithm then makes a decision that is sent to the Arduino attached to the actuators on the launcher via serial connection to pan and launch the catapult towards the target.</p>
+                                    <p>Three Python scripts, two Arduino microcontrollers, and a helper module are used to make Frost work. One Python script receives image inputs from the Kinect camera. A second Python script receives data from the Arduino attached to the LIDAR via serial connection. Both of these scripts then feed into a main script that collects the data from both modules and combines them using a helper module. The algorithm then makes a decision that is sent to the Arduino controlling the actuators on the launcher via serial connection to pan and launch the catapult towards the target.</p>
+                                    <span class="image fit"><img src="images/system_diagram.JPG" alt="" /></span>
                                 </section>
                             </div>
                     </div>
