--- a/Website/team.html
+++ b/Website/team.html
@@ -31,7 +31,7 @@
                                         </ul>
                                     </li>
                                     <li><a href="budget.html">Budget</a></li>
-                                    <li><a href="journey.html">Our Journey</a></li>
+                                    <li><a href="journey.html">Our Story</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -41,8 +41,7 @@
             <section id="main" class="container">
 
                 <header class="major">
-                    <h2>Team</h2>
-                    <p>We're Awesome</p>
+                    <h2>Team STARK</h2>
                 </header>
                 
                 <div class="row">
@@ -88,7 +87,7 @@
                                 Kevin Zhang
                             </h2>
                             <h4>
-                                Kevin Zhang is a computational roboticist who specializes in sensor fusion and decision making algorithms. He worked extensively on computer vision and body detection algorithms, as well as integrating data streams and parallelizing processes. His work with sensors also allowed him to help greatly on firmware and sensor interfacing. Kevin has a funny obsession with chickens, which manifested itself several times in the codebase as test variables. Luckily, he is also diligent with code documentation and rooted them out for the final product.
+                                Kevin Zhang is a computational roboticist who specializes in sensor fusion and decision making algorithms. He worked extensively on computer vision and decision making algorithms, as well as integrating data streams and parallelizing processes. He also helped greatly on firmware and sensor interfacing. Kevin has a funny obsession with chickens, which manifested itself several times in the codebase as test variables. Luckily, he is also diligent with code documentation and rooted them out for the final product.
                             </h4>
                         </section>
                         <section class="box alt">
@@ -99,7 +98,7 @@
                                 Kevin Guo
                             </h2>
                             <h4>
-                                Don't let the picture to the left fool you. Behind the serious exterior there exists a comical mechanical engineer. Kevin's CAD prowess is known throughout the school and it certainly came in handy this project. Additionally, few people know that Kevin's middle name is fabrication and his second home is the Olin Machine Shop. 
+                                Don't let the picture to the left fool you. Behind the serious exterior there exists a comical mechanical engineer. Kevin's CAD prowess is known throughout the school and it certainly came in handy this project. Additionally, few people know that Kevin's middle name is fabrication and his second home is the Olin Machine Shop. He was heavily involved in machining all the parts and designing the mechanical structure, and he kept a good track of our finances. 
                             </h4>
                         </section>
                     </div>
