--- a/Website/elements.html
+++ b/Website/elements.html
@@ -17,32 +17,33 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
-					<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#" class="icon fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header>
+                <header id="header">
+                    <nav id="nav">
+                        <ul>
+                            <li><a href="index.html" class="button">Home</a></li>
+                            <li><a href="team.html" class="button">The Team</a></li>
+                            <li>
+                                <a href="#" class="icon fa-angle-down">Learn More</a>
+                                <ul>
+                                    <li><a href="system_overview.html">System Overview</a></li>
+                                    <li>
+                                        <a href="how_it_works.html">How it works</a>
+                                        <ul>
+                                            <li><a href="mechanical.html">Mechanical</a></li>
+                                            <li><a href="electrical.html">Electrical</a></li>
+                                            <li><a href="software.html">Software</a></li>
+                                            <li><a href="firmware.html">Firmware</a></li>
+                                            <li><a href="prototype.html">Prototype</a></li>
+                                            <li><a href="sensors.html">Sensors</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="budget.html">Budget</a></li>
+                                    <li><a href="journey.html">Our Story</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                </header>
 
 			<!-- Main -->
 				<section id="main" class="container">
